--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -14,6 +14,7 @@
         <li><a href="#brushes">Brushes</a></li>
         <li><a href="#frames">Frames</a></li>
         <li><a href="#paint">Paint</a></li>
+        <li><niets behalve een test</li>
       </ul>
     </div>
 
@@ -33,7 +34,7 @@
 
     <div id="frames">
       <h2 class="lightcoralcolor">Frames</h2>
-      <img src="D:\projects\Dasmoto's Arts & Crafts\resources\images\frames.jpeg" alt="picture of frames">
+      <img src="resources/images/frames.jpeg" alt="picture of frames">
       <h3>Art Frames (assorted)</h3>
       <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="prijs">Starting at $2.00 / frame</span>.
       </p>
@@ -43,7 +44,7 @@
 
     <div id="paint">
       <h2 class="skybluecolor">Paint</h2>
-      <img src="D:\projects\Dasmoto's Arts & Crafts\resources\images\paint.jpeg" alt="picture of colourtuben">
+      <img src="resources/images/paint.jpeg" alt="picture of colourtuben">
       <h3>Clean Finnish Paint</h3>
       <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="prijs">Starting at $5.00 / tube</span>.
       </p>
